[gd_scene load_steps=32 format=3 uid="uid://ddvy5ge64ko5b"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_0qak4"]
[ext_resource type="Texture2D" uid="uid://cbll3qop4qdaa" path="res://Assets/Art/Player/SpriteSheet.png" id="2_0giew"]
[ext_resource type="PackedScene" uid="uid://bhatg6awsunwl" path="res://Components/hurtbox_component.tscn" id="4_45sbj"]
[ext_resource type="PackedScene" uid="uid://cit2cdkydlfww" path="res://Components/health_component.tscn" id="4_unofr"]
[ext_resource type="PackedScene" uid="uid://btdv6ffutib13" path="res://Components/hitbox_component.tscn" id="5_kk8m6"]
[ext_resource type="PackedScene" uid="uid://cwergp0mb2m60" path="res://Components/attack_component.tscn" id="6_fwkbs"]
[ext_resource type="Texture2D" uid="uid://b1aompnr5otun" path="res://Assets/Art/Effects/SlashCurved/SpriteSheet.png" id="7_33whi"]
[ext_resource type="PackedScene" uid="uid://utn17siolejk" path="res://Components/weapon_component.tscn" id="8_7a0cc"]
[ext_resource type="Script" path="res://Components/weapon_component.gd" id="9_3m1rx"]
[ext_resource type="PackedScene" uid="uid://bqlo6s28fcn4k" path="res://Components/ability_component.tscn" id="11_rf703"]
[ext_resource type="Script" path="res://Components/ability_component.gd" id="12_4x7gc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqgbb"]
size = Vector2(106.375, 112.125)

[sub_resource type="Animation" id="Animation_jajsi"]
resource_name = "moveDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}

[sub_resource type="Animation" id="Animation_1tm2i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cwus6"]
resource_name = "moveUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}

[sub_resource type="Animation" id="Animation_76ap6"]
resource_name = "moveLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}

[sub_resource type="Animation" id="Animation_7cu30"]
resource_name = "moveRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}

[sub_resource type="Animation" id="Animation_nun0h"]
resource_name = "sprintDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}

[sub_resource type="Animation" id="Animation_vs2a6"]
resource_name = "sprintUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}

[sub_resource type="Animation" id="Animation_cix2i"]
resource_name = "sprintLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}

[sub_resource type="Animation" id="Animation_lgu8u"]
resource_name = "sprintRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}

[sub_resource type="Animation" id="Animation_xvisa"]
resource_name = "throwDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 16, 0]
}

[sub_resource type="Animation" id="Animation_7honl"]
resource_name = "throwUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 17, 1]
}

[sub_resource type="Animation" id="Animation_psrr6"]
resource_name = "throwLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 18, 2]
}

[sub_resource type="Animation" id="Animation_2i1qe"]
resource_name = "throwRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 19, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_go8el"]
_data = {
"RESET": SubResource("Animation_1tm2i"),
"moveDown": SubResource("Animation_jajsi"),
"moveLeft": SubResource("Animation_76ap6"),
"moveRight": SubResource("Animation_7cu30"),
"moveUp": SubResource("Animation_cwus6"),
"sprintDown": SubResource("Animation_nun0h"),
"sprintLeft": SubResource("Animation_cix2i"),
"sprintRight": SubResource("Animation_lgu8u"),
"sprintUp": SubResource("Animation_vs2a6"),
"throwDown": SubResource("Animation_xvisa"),
"throwLeft": SubResource("Animation_psrr6"),
"throwRight": SubResource("Animation_2i1qe"),
"throwUp": SubResource("Animation_7honl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fomp"]
size = Vector2(106, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thkyo"]
size = Vector2(39.0626, 41.3532)

[sub_resource type="Animation" id="Animation_qit64"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("WeaponComponent/Weapon Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponComponent/Weapon Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 2)]
}

[sub_resource type="Animation" id="Animation_41nga"]
resource_name = "slashCurved"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponComponent/Weapon Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponComponent/Weapon Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.5708, 0.261799, 0.0, -0.174533, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(60, 50), Vector2(120, -2.98025e-08), Vector2(122, -1.90735e-06), Vector2(127, -11), Vector2(100, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WeaponComponent/Weapon Sprite/HitboxComponent/Hitbox Collision:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.75, 2), Vector2(1, 2.75), Vector2(1, 3), Vector2(0.8, 2.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jgw7x"]
_data = {
"RESET": SubResource("Animation_qit64"),
"slashCurved": SubResource("Animation_41nga")
}

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 12
script = ExtResource("1_0qak4")
shurikenMaxStacks = 5
shurikenCooldown = 1
metadata/_edit_group_ = true

[node name="Player Sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
scale = Vector2(7, 7)
texture = ExtResource("2_0giew")
hframes = 4
vframes = 7

[node name="Marker2D" type="Marker2D" parent="Player Sprite"]
scale = Vector2(0.142857, 0.142857)

[node name="Movement Collision" type="CollisionShape2D" parent="."]
position = Vector2(3, 0.0625)
shape = SubResource("RectangleShape2D_xqgbb")

[node name="Movement Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_go8el")
}

[node name="HealthComponent" parent="." instance=ExtResource("4_unofr")]
maxHealthPoints = 5

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("4_45sbj")]
collision_mask = 2
healthComponent = NodePath("../HealthComponent")

[node name="Hurtbox Collision" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_6fomp")
debug_color = Color(0.992157, 0, 0.25098, 0.419608)

[node name="WeaponComponent" parent="." node_paths=PackedStringArray("hitboxComponent", "attackComponent") instance=ExtResource("8_7a0cc")]
y_sort_enabled = true
script = ExtResource("9_3m1rx")
hitboxComponent = NodePath("Weapon Sprite/HitboxComponent")
attackComponent = NodePath("AttackComponent")

[node name="Weapon Sprite" type="Sprite2D" parent="WeaponComponent"]
visible = false
y_sort_enabled = true
position = Vector2(80, 0)
scale = Vector2(4, 4)
texture = ExtResource("7_33whi")
hframes = 4

[node name="HitboxComponent" parent="WeaponComponent/Weapon Sprite" node_paths=PackedStringArray("attackComponent") instance=ExtResource("5_kk8m6")]
position = Vector2(-20, 0)
scale = Vector2(0.25, 0.25)
collision_mask = 2
attackComponent = NodePath("../../AttackComponent")

[node name="Hitbox Collision" type="CollisionShape2D" parent="WeaponComponent/Weapon Sprite/HitboxComponent"]
position = Vector2(100, 0)
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_thkyo")
disabled = true
debug_color = Color(0, 0.639216, 0.360784, 0.419608)

[node name="ColorRect" type="ColorRect" parent="WeaponComponent/Weapon Sprite"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="WeaponComponent/Weapon Sprite"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.25
offset_top = -16.5
offset_right = -12.25
offset_bottom = -15.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="Weapon Animation" type="AnimationPlayer" parent="WeaponComponent"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_jgw7x")
}

[node name="AttackComponent" parent="WeaponComponent" instance=ExtResource("6_fwkbs")]
damage = 1

[node name="AbilityComponent" parent="." instance=ExtResource("11_rf703")]
script = ExtResource("12_4x7gc")

[node name="Control" type="Control" parent="AbilityComponent"]
layout_mode = 3
anchors_preset = 0
offset_left = -63.0
offset_top = -156.0
offset_right = -14.0
offset_bottom = -129.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="AbilityComponent/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="AbilityComponent/Control/VBoxContainer"]
layout_mode = 2
text = "Shuriken Charges"

[node name="Label2" type="Label" parent="AbilityComponent/Control/VBoxContainer"]
layout_mode = 2

[node name="Timer" type="Timer" parent="AbilityComponent"]

[node name="HBoxContainer" type="HBoxContainer" parent="AbilityComponent"]
clip_contents = true
offset_left = -98.0
offset_top = -103.0
offset_right = 690.0
offset_bottom = 25.0
scale = Vector2(0.25, 0.25)
alignment = 1
metadata/_edit_group_ = true

[connection signal="timeout" from="AbilityComponent/Timer" to="AbilityComponent" method="_on_timer_timeout"]
